--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -172,7 +172,7 @@ section {
             font-weight: 700;
 
             &:hover {
-                color: $white !important;
+                color: $w !important;
             }
         }
     }
@@ -472,7 +472,7 @@ section {
         width: 140px;
     }
     
-
+}
 
 .owl-theme .owl-dots, .owl-theme .owl-nav {
     display: flex;
@@ -519,7 +519,6 @@ button:hover {
 }
 button span:hover {
     background-color: transparent !important;
-}
 }
 // End route
 
