--- a/assets/styles/scss/_media.scss
+++ b/assets/styles/scss/_media.scss
@@ -15,6 +15,9 @@
         .description-card {
             min-width: 120px !important;
         }
+        .tab {
+            margin-top: 70px;
+        }
     }
 
     .information {
@@ -99,6 +102,10 @@
         }
     }
     .costs {
+        
+        .tab {
+            margin-top: 0;
+        }
         .tab_card {
             margin-bottom: 70px !important;
         }
