--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -172,7 +172,7 @@ section {
             font-weight: 700;
 
             &:hover {
-                color: $w !important;
+                color: $white !important;
             }
         }
     }
