--- a/assets/styles/scss/_media.scss
+++ b/assets/styles/scss/_media.scss
@@ -1,3 +1,14 @@
+@media (max-width: 1024px) {
+    .big-photo {
+    .owl-nav {
+        position: absolute;
+        bottom: 20px;
+        right: 50%;
+        transform: translateX(-50%);
+    }
+    }
+}
+
 @media (max-width: 992px) {
     .container {
         padding: 0 50px;
@@ -75,7 +86,6 @@
     }
     
     .header {
-        height: 100vh;
         .desctop_menu {
             display: none;
         }
@@ -433,6 +443,15 @@
             display: flex;
         }
     }
+    
+    .big-photo {
+        .owl-nav {
+            position: absolute;
+            bottom: 20px;
+            right: 95%;
+            transform: translateX(0%);
+        }
+        }
 }
 
 @media (max-width: 375px) {
